--- a/LCTMoodle/Views/NguoiDung/DanhSachNguoiDungBiChan.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DanhSachNguoiDungBiChan.cshtml
@@ -27,7 +27,7 @@
         coQuyenDoiMatKhau = coQuyenCapNhatThongTin = coQuyenQuanLyNguoiDung = false;
     }
 
-    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QuanLyNguoiDung");
+    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QLNguoiDung");
 
     if (coQuyenCapNhatThongTin || coQuyenDoiMatKhau || coQuyenQuanLyNguoiDung)
     {
