--- a/LCTMoodle/Views/NguoiDung/Sua.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Sua.cshtml
@@ -25,7 +25,7 @@
         coQuyenDoiMatKhau = coQuyenQuanLyNguoiDung = false;
     }
 
-    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QuanLyNguoiDung");
+    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QLNguoiDung");
 
     if (coQuyenDoiMatKhau || coQuyenQuanLyNguoiDung)
     {
