--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -30,7 +30,7 @@
         coQuyenXemKhoaHoc = coQuyenXemHoiDap = false;
     }
 
-    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QuanLyNguoiDung");
+    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QLNguoiDung");
     
     if (coQuyenCapNhatThongTin || coQuyenDoiMatKhau)
     {
