--- a/LCTMoodle/Views/NguoiDung/DoiMatKhau.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DoiMatKhau.cshtml
@@ -26,7 +26,7 @@
         coQuyenCapNhatThongTin = coQuyenQuanLyNguoiDung = false;
     }
 
-    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QuanLyNguoiDung");
+    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QLNguoiDung");
 
     if (coQuyenCapNhatThongTin || coQuyenQuanLyNguoiDung)
     {
