--- a/LCTMoodle/Views/NguoiDung/QuanLyNguoiDung.cshtml
+++ b/LCTMoodle/Views/NguoiDung/QuanLyNguoiDung.cshtml
@@ -25,7 +25,7 @@
         coQuyenDoiMatKhau = coQuyenCapNhatThongTin = coQuyenQuanLyNguoiDung = false;
     }
 
-    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QuanLyNguoiDung");    
+    coQuyenQuanLyNguoiDung = QuyenHelper.co(dsQuyen, "QLNguoiDung");    
 
     if (coQuyenCapNhatThongTin || coQuyenDoiMatKhau || coQuyenQuanLyNguoiDung)
     {
