--- a/LCTMoodle/Views/KhoaHoc/_Item.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/_Item.cshtml
@@ -1,5 +1,11 @@
 ﻿@using LCTMoodle.LCTView
 @model DTOLayer.KhoaHocDTO
+@{
+    if (Model == null)
+    {
+        return;
+    }
+}
 
 <li class="item">
     <section class="khung-thong-tin">
