--- a/LCTMoodle/Views/NguoiDung/TinNhan.cshtml
+++ b/LCTMoodle/Views/NguoiDung/TinNhan.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using DTOLayer;
+@using LCTMoodle.LCTView;
+@model List<TinNhanDTO>
 @{
     ViewBag.Title = "TinNhan";
     Layout = "~/Views/LCT/Khung.cshtml";
@@ -11,10 +13,41 @@
 @section Scripts {
 }
 
-<article class="khung-tin-nhan">
-    <section class="hinh-dai-dien"></section>
-    <section class="noi-dung">
-        <div class="chi-tiet">bla bla bla ...</div>
-        <div class="nguoi-gui">lbc - 8/7/2015</div>
-    </section>
-</article>
+@if (Model == null)
+{
+    <p class="empty">Bạn chưa có tin nhắn</p>
+}
+else
+{
+    <article class="hop">
+        <section class="tieu-de">Danh sách tin nhắn</section>
+        <section class="noi-dung">
+            @foreach(var tinNhan in Model)
+            {
+                <article class="khung-tin-nhan">
+                    <section class="hinh-dai-dien">
+                        @if (tinNhan.nguoiGui == null)
+                        {
+                            <img src="/HinhDaiDienMacDinh.png/NguoiDung" />
+                        }
+                        else
+                        {
+                            @NguoiDungView.hinhDaiDien(tinNhan.nguoiGui)
+                        }
+                    </section>
+                    <section class="noi-dung">
+                        <div class="chi-tiet">@tinNhan.noiDung</div>
+                        @if (tinNhan.nguoiGui == null)
+                        {
+                            <div class="nguoi-gui">không xác định</div>
+                        }
+                        else
+                        {
+                            <div class="nguoi-gui">@tinNhan.nguoiGui.ho @tinNhan.nguoiGui.tenLot @tinNhan.nguoiGui.ten - @(DateTime.Compare(tinNhan.thoiDiemGui.Value, DateTime.Now) <= 0 ? tinNhan.thoiDiemGui.Value.ToString("hh:mm tt") : tinNhan.thoiDiemGui.Value.ToString("d/M/yyyy"))</div>
+                        }
+                    </section>
+                </article>
+            }
+        </section>
+    </article>
+}
