--- a/LCTMoodle/Views/HoiDap/Index.cshtml
+++ b/LCTMoodle/Views/HoiDap/Index.cshtml
@@ -106,6 +106,11 @@
     <section class="noi-dung" id="danh_sach">
         @Html.Partial("~/Views/HoiDap/_DanhSachCauHoi.cshtml", Model)
     </section>
+    @Html.Partial("~/Views/LCT/_PhanTrang.cshtml", null, new ViewDataDictionary()
+    {
+        { "TongSoLuong", LCTHelper.layGiaTri<int>(Model[0].duLieuThem, "TongSoDong", 0) },
+        { "SoLuongMoiTrang", Data.GiaTri.soLuongCauHoiMoiTrang }
+    })
 </article>
 
 <!--#endregion -->
