--- a/LCTMoodle/Views/BaiVietBaiTap/ChamDiem.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/ChamDiem.cshtml
@@ -24,7 +24,7 @@
     chucNang.Add("href='/KhoaHoc/" + khoaHoc.ma.Value + "?hienthi=baitap'");
 
     chucNang.Add("Danh sách thành viên");
-    chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + khoaHoc.ma.Value + "'");
+    chucNang.Add("href='/KhoaHoc/ThanhVien/" + khoaHoc.ma.Value + "'");
 
     var maNguoiDung = Session["NguoiDung"] as int?;
     string[] dsQuyen;
