--- a/LCTMoodle/Views/KhoaHoc/ThanhVien.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/ThanhVien.cshtml
@@ -12,7 +12,7 @@
 
     ViewData["DieuHuong"] = new List<string>() {
         Model.ten, "/KhoaHoc/" + Model.ma,
-        "Danh sách thành viên", "/KhoaHoc/DanhSachThanhVien/" + Model.ma
+        "Danh sách thành viên", "/KhoaHoc/ThanhVien/" + Model.ma
     };
 
     /*
