--- a/LCTMoodle/Views/KhoaHoc/ThongTin.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/ThongTin.cshtml
@@ -16,7 +16,7 @@
     List<string> chucNang = new List<string>();
     
     chucNang.Add("Danh sách thành viên");
-    chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + Model.ma + "'");
+    chucNang.Add("href='/KhoaHoc/ThanhVien/" + Model.ma + "'");
 
     var maNguoiDung = Session["NguoiDung"] as int?;
     string[] dsQuyen;
