--- a/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
+++ b/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
@@ -23,7 +23,7 @@
     chucNang.Add("href='/KhoaHoc/" + khoaHoc.ma + "'");
 
     chucNang.Add("Danh sách thành viên");
-    chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + khoaHoc.ma + "'");
+    chucNang.Add("href='/KhoaHoc/ThanhVien/" + khoaHoc.ma + "'");
 
     var dsQuyen = QuyenView.layDSQuyen("KH", khoaHoc.ma.Value);
 
