--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -62,7 +62,7 @@
     chucNang.Add("href='/KhoaHoc/ThongTin/" + Model.ma + "'");
 
     chucNang.Add("Danh sách thành viên");
-    chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + Model.ma + "'");
+    chucNang.Add("href='/KhoaHoc/ThanhVien/" + Model.ma + "'");
 
     var maNguoiDung = Session["NguoiDung"] as int?;
     string[] dsQuyen;
