--- a/LCTMoodle/Content/styles/KhoaHoc/ThongTin.css
+++ b/LCTMoodle/Content/styles/KhoaHoc/ThongTin.css
@@ -9,6 +9,7 @@
         height: 100px;
         min-width: 100px;
         max-width: 100px;
+        margin-right: 5px;
     }
 
         .khung-tren .hinh-dai-dien img {
