--- a/LCTMoodle/Views/HoiDap/Index.cshtml
+++ b/LCTMoodle/Views/HoiDap/Index.cshtml
@@ -103,7 +103,7 @@
 
 <article class="hop">
     <section class="tieu-de">Danh sách câu hỏi</section>
-    <section class="noi-dung" id="danh_sach">
+    <section class="noi-dung danh-sach-cau-hoi" id="danh_sach">
         @Html.Partial("~/Views/HoiDap/_DanhSachCauHoi.cshtml", Model)
     </section>
     @Html.Partial("~/Views/LCT/_PhanTrang.cshtml", null, new ViewDataDictionary()
