--- a/LCTMoodle/Content/styles/HoiDap/Index.css
+++ b/LCTMoodle/Content/styles/HoiDap/Index.css
@@ -1,62 +1,62 @@
-﻿.cau-hoi {
+﻿.danh-sach-cau-hoi .cau-hoi {
     background-color: #fff;   
     border: 1px solid #ddd;
     margin-bottom: 10px;
     display: flex;
 }
     /*Thông tin*/
-    .cau-hoi .thong-tin {
+    .danh-sach-cau-hoi .cau-hoi .thong-tin {
         display: flex;
         padding: 10px;
         border-right: 1px solid #f5f5f5;
         background-color: #f8f8f8;            
     }
-    .thong-tin.duyet {
+    .danh-sach-cau-hoi .thong-tin.duyet {
         border-left: 3px solid #08c;
     }
-    .thong-tin.da-tra-loi {
+    .danh-sach-cau-hoi .thong-tin.da-tra-loi {
         border-left: 3px solid #f90;
     }                    
-        .thong-tin .diem,
-        .thong-tin .tra-loi {
+        .danh-sach-cau-hoi .thong-tin .diem,
+        .danh-sach-cau-hoi .thong-tin .tra-loi {
             width: 70px;
             position: relative;
             display: flex;
             flex-direction: column;
             color: #888;
         }
-            .thong-tin .diem:before,
-            .thong-tin .tra-loi:before {
+            .danh-sach-cau-hoi .thong-tin .diem:before,
+            .danh-sach-cau-hoi .thong-tin .tra-loi:before {
                 content: '';
                 width: 24px;
                 height: 24px;
                 background: url('/HoiDap.png/HoiDap') no-repeat;
                 margin: 0 auto;
             }
-            .thong-tin .tra-loi:before {
+            .danh-sach-cau-hoi .thong-tin .tra-loi:before {
                 background-position: -36px -24px;
             }
-            .thong-tin .diem:before {
+            .danh-sach-cau-hoi .thong-tin .diem:before {
                 background-position: -36px 0;
             }
-                .thong-tin span {
+                .danh-sach-cau-hoi .thong-tin span {
                     text-align: center;
                     margin-top: 5px;
                 }
     /*Chi tiết*/
-    .chi-tiet {
+    .danh-sach-cau-hoi .chi-tiet {
         width: 100%;
         padding: 10px;
-        border-left: 3px solid #ddd;
+        border-left: 3px solid #eee;
     }
-        .chi-tiet .tieu-de {                
+        .danh-sach-cau-hoi .chi-tiet .tieu-de {                
             font-size: 15px;
             font-weight: bold;
         }
-            .chi-tiet .tieu-de a {                
+            .danh-sach-cau-hoi .chi-tiet .tieu-de a {                
                 color: #333;
             }
-        .chi-tiet .thong-tin-dang {
+        .danh-sach-cau-hoi .chi-tiet .thong-tin-dang {
             font-size: 12px;
             color: #999;
             text-align: left;
@@ -64,35 +64,35 @@
             display: flex;                
         }
     /*Thông tin đăng*/
-    .thong-tin-dang {
+    .danh-sach-cau-hoi .thong-tin-dang {
         display: flex;
         height: 20px;
         position: relative;
     }
-        .thong-tin-dang .nguoi-dang {
+        .danh-sach-cau-hoi .thong-tin-dang .nguoi-dang {
         }
-            .thong-tin-dang .nguoi-dang a {
+            .danh-sach-cau-hoi .thong-tin-dang .nguoi-dang a {
                 color: #999;                    
                 display:block;
             }
-            .thong-tin-dang .nguoi-dang a:hover,
-            .thong-tin-dang .nguoi-dang a:focus {
+            .danh-sach-cau-hoi .thong-tin-dang .nguoi-dang a:hover,
+            .danh-sach-cau-hoi .thong-tin-dang .nguoi-dang a:focus {
                 text-decoration: none;
             }
-                .thong-tin-dang .nguoi-dang img {
+                .danh-sach-cau-hoi .thong-tin-dang .nguoi-dang img {
                     height: 20px;
                     vertical-align: middle;
                 }
                     
-                .thong-tin-dang .nguoi-dang span {
+                .danh-sach-cau-hoi .thong-tin-dang .nguoi-dang span {
                     margin-left: 2px;
                 }
-        .thong-tin-dang .thoi-gian-dang {
+        .danh-sach-cau-hoi .thong-tin-dang .thoi-gian-dang {
         }
-            .thong-tin-dang .thoi-gian-dang {
+            .danh-sach-cau-hoi .thong-tin-dang .thoi-gian-dang {
 
             }
-                .thong-tin-dang .thoi-gian-dang span:before {
+                .danh-sach-cau-hoi .thong-tin-dang .thoi-gian-dang span:before {
                     content: '.';
                     height: 20px;
                     width: 5px;
