--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -181,7 +181,7 @@
 {
     <article class="hop">
         <section class="tieu-de">Thông tin hỏi đáp</section>
-        <section class="noi-dung">
+        <section class="noi-dung danh-sach-cau-hoi">
             @if (ViewData["DanhSachCauHoi"] != null)
             {
                 List<DTOLayer.CauHoiDTO> dsCauHoi = ViewData["DanhSachCauHoi"] as List<DTOLayer.CauHoiDTO>;
